--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_LIVEKIT_URL=wss://your-livekit-url.livekit.cloud
+LIVEKIT_URL=wss://your-livekit-url.livekit.cloud
 LIVEKIT_API_SECRET=your_livekit_api_secret
 LIVEKIT_API_KEY=your_livekit_api_key
 OPENAI_API_KEY=your_openai_api_key
